--- a/hospital_BE/src/main/resources/application.properties
+++ b/hospital_BE/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/hospital
-spring.datasource.username=root
-spring.datasource.password=2000
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.dbcp2.max-idle=10
 spring.datasource.tomcat.max-active=500
 spring.datasource.tomcat.max-wait=100
